fix name class into swagger
